--- a/src/sm-module-save.css
+++ b/src/sm-module-save.css
@@ -53,7 +53,7 @@
 
 .menu[visible] {
   display: block;
-  box-shadow: 0 0 1px var(--light-black);
+  box-shadow: 0 1px 1px var(--light-black);
 }
 
 .menu__item {
