add styling for busy state

--- a/src/sm-module-save.css
+++ b/src/sm-module-save.css
@@ -27,6 +27,10 @@
   font-weight: 600;
 }
 
+.controls__save[busy] {
+  color: var(--med-white);
+}
+
 .controls__menu {
   width: var(--tool-size);
   border-left: 1px solid var(--light-white);
